--- a/Cmakelists.txt
+++ b/Cmakelists.txt
@@ -1,23 +1,21 @@
-
-```cmake
 cmake_minimum_required(VERSION 3.10)
 
-project(LexerProject)
+project(WolfTranslator)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(lexer_app
+add_executable(wolf_translator
     lexer.cpp
+    parser.cpp
 )
 
-set_target_properties(lexer_app PROPERTIES
+set_target_properties(wolf_translator PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
 )
 
 if(MSVC)
-    target_compile_options(lexer_app PRIVATE /W4)
+    target_compile_options(wolf_translator PRIVATE /W4)
 else()
-    target_compile_options(lexer_app PRIVATE -Wall -Wextra -Wpedantic)
+    target_compile_options(wolf_translator PRIVATE -Wall -Wextra -Wpedantic)
 endif()
-```
