--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,17 @@ cmake_minimum_required(VERSION 3.10)
 
 project(WolfTranslator)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+include_directories(include)
+
 add_executable(wolf_translator
-    lexer.cpp
-    parser.cpp
+    src/main.cpp
+    src/lexer.cpp
+    src/parser.cpp
+    src/interpreter.cpp
+    src/py_binding.cpp
 )
 
 set_target_properties(wolf_translator PROPERTIES
