refactor: 重命名项目并更新文件扩展名
将项目名称从WolfTranslator改为Translator
将.wolf文件扩展名改为.game
更新CMakeLists.txt和相关构建配置
重构代码生成器以处理新扩展名
优化布尔值解析逻辑，添加大小写不敏感支持

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(WolfTranslator)
+project(Translator)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -12,16 +12,16 @@ include_directories(include)
 file(GLOB SOURCES "src/*.cpp")
 
 # 创建可执行文件
-add_executable(wolf_translator ${SOURCES})
+add_executable(translator ${SOURCES})
 
-set_target_properties(wolf_translator PROPERTIES
+set_target_properties(translator PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
     RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}"
     RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}"
 )
 
 if(MSVC)
-    target_compile_options(wolf_translator PRIVATE /W4 /utf-8)
+    target_compile_options(translator PRIVATE /W4 /utf-8)
 else()
-    target_compile_options(wolf_translator PRIVATE -Wall -Wextra -Wpedantic)
+    target_compile_options(translator PRIVATE -Wall -Wextra -Wpedantic)
 endif()
